--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+REDDIT_CLIENT_ID=
+REDDIT_SECRET=
+REDDIT_API_URL=
+REDDIT_USER_AGENT=
+REDDIT_USERNAME=
+REDDIT_PASSWORD=
