--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=22c2cc7caa4a24eff132",
+    "/css/app.css": "/css/app.css?id=fe5014e8387d18e87f6c"
 }
