--- a/.env.example
+++ b/.env.example
@@ -4,14 +4,15 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
+#DB_SOCKET=/Applications/MAMP/tmp/mysql/mysql.sock
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -19,33 +20,10 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
 REDDIT_CLIENT_ID=
 REDDIT_SECRET=
-REDDIT_API_URL=
-REDDIT_USER_AGENT=
+REDDIT_API_URL=https://oauth.reddit.com
+REDDIT_USER_AGENT="APPNAME HERE (by /u/USERNAME HERE)"
+
 REDDIT_USERNAME=
 REDDIT_PASSWORD=
