--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
-#DB_SOCKET=/Applications/MAMP/tmp/mysql/mysql.sock
+DB_DATABASE=reddit_bot
+DB_USERNAME=default
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
